#382, #380 designer loads from Sqlite configuration, inflight tests not passing yet